src/k3s-old/drone/drone.secrets_plugin.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-secrets-plugin
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
  selector:
    app: drone-secrets-plugin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone-secrets-plugin
  name: drone-secrets-plugin
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-secrets-plugin
  template:
    metadata:
      labels:
        app: drone-secrets-plugin
    spec:
      serviceAccountName: drone-secrets
      containers:
      - name: secrets
        image: ${SECRETS_EXTENSION_IMAGE}
        ports:
        - containerPort: 3000
